--- a/temalabor_drkeseruklaudia/public/index.html
+++ b/temalabor_drkeseruklaudia/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Website of Dr. Keserű Klaudia, lawyer.">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/LogoBg2.png" />
+  <link rel="stylesheet" href='../src/font-awesome-4.7.0/css/font-awesome.min.css'>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
