--- a/temalabor_drkeseruklaudia/public/index.html
+++ b/temalabor_drkeseruklaudia/public/index.html
@@ -6,12 +6,9 @@
   <link rel="icon" href="%PUBLIC_URL%/Images/LogoBg2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Website of Dr. Keserű Klaudia, lawyer.">
+  <meta name="robots" content="index, follow" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/LogoBg2.png" />
   <link rel="stylesheet" href='../src/font-awesome-4.7.0/css/font-awesome.min.css'>
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>dr. Keserű Klaudia</title>
 </head>
