SEO optimalization and removing uneccesary folder

--- a/temalabor_drkeseruklaudia/public/index.html
+++ b/temalabor_drkeseruklaudia/public/index.html
@@ -5,10 +5,9 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/Images/LogoBg2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Website of Dr. Keserű Klaudia, lawyer.">
+  <meta name="description" content="Dr. Keserű Klaudia ügyvéd. Kapcsolattartási nyelv: magyar, német. Bejelentkezés: Tel.: +3630/683-8822. E-mail.: dr.keseru.klaudia@gmail.com">
   <meta name="robots" content="index, follow" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/LogoBg2.png" />
-  <link rel="stylesheet" href='../src/font-awesome-4.7.0/css/font-awesome.min.css'>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>dr. Keserű Klaudia</title>
 </head>
