--- a/temalabor_drkeseruklaudia/public/contact_form.html
+++ b/temalabor_drkeseruklaudia/public/contact_form.html
@@ -1,5 +1,6 @@
-<form name="contact v1" netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name v1" />
-    <input type="email" name="email v1" />
-    <textarea name="message v1"></textarea>
+<form name="contact" netlify hidden>
+    <input type="text" name="Teljes nev" />
+    <input type="text" name="Telefonszam">
+    <input type="email" name="Email" />
+    <textarea name="Kerdes"></textarea>
   </form>
